--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,8 @@ body {
     background-image:
         linear-gradient(
             to right bottom,
-            hsla(111, 55%, 64%, 0.8),
-            hsla(160, 64%, 43%, 0.8)),
+            rgba(128, 214, 113, 0.8),
+            rgba(39, 180, 133, 0.8)),
         url(../img/hero.jpg);
     /* fit element inside of box with cover */
     background-size: cover;
