--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -38,3 +38,20 @@ body {
         animation: moveInRight 1s ease-out;
     }
 }
+
+.heading-secondary {
+    font-size: 3.5rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    display: inline-block;
+    background-image:
+    // to use bg color for word color
+    linear-gradient(
+        to right,
+        $color-primary-light,
+        $color-primary-dark);
+    // clip as background
+    -webkit-background-clip: text;
+    // the og word color turn to transparent
+    color: transparent;
+}
