--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -2,10 +2,13 @@
     position: relative;
 
     &__photo {
-        width: 55%;
-        box-shadow: 0 1.5rem 4rem rgba($color-black, .4);
+        width: 55%; // responsive img in percentage
+        box-shadow: 0 1.5rem 4rem rgba($color-black, 0.4);
         border-radius: 2px;
+        z-index: 10;
         position: absolute;
+        transition: all 0.2s;
+        outline-offset: 2rem;
 
         &--p1 {
             left: 0;
@@ -21,5 +24,17 @@
             left: 20%;
             top: 10rem;
         }
+
+        &:hover {
+            outline: 1.5rem solid $color-primary;
+            transform: scale(1.05) translateY(-.5rem);
+            box-shadow: 0 2.5rem 4rem rgba($color-black, 0.5);
+            z-index: 20;
+        }
+    }
+
+    // .composition:hover .composition__photo:not(:hover)
+    :hover &__photo:not(:hover) {
+        transform: scale(0.95);
     }
 }
